# physics-engine

./: Application.cpp  Application.h  CMakeLists.txt  Physics.cpp  Physics.h  README.md  TransformObject.cpp  TransformObject.h  glad.c  main.cpp
polygons/: Circle.cpp  Circle.h  Polygon.cpp  Polygon.h  Rectangle.cpp  Rectangle.h
shaders/: Shader.cpp  Shader.h  test_fragment_shader.fragment  test_fragment_shader_green.fragment  test_vertex_shader.vs
